--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@ and I'm always looking for new projects to take up. Thanks for stopping by.
 <div id="portfolio">
 <h2 class="head">Portfolio</h2>
 
-<div class="ptitle">
+<div class="ptitle1">
 <div class="read">
 <img src="images/port1.jpg">
 <p class="imgDescription">Website Work<br><a href="http://www.pressingx.com/">Visit</a></p>
 </div> <!-- End read -->
 </div> <!-- End ptitle -->
 
-<div class="ptitle">
+<div class="ptitle2">
 <div class="read">
 <img src="images/port2.jpg">
 <p class="imgDescription">Video Work<br><a href="https://www.youtube.com/user/GameplayFlicks/">Visit</a></p>
 </div> <!-- End read -->
 </div> <!-- End ptitle -->
 
-<div class="ptitle">
+<div class="ptitle3">
 <div class="read">
 <img src="images/port3.jpg">
 <p class="imgDescription">Photo Work<br><a href="http://chawkthree.deviantart.com/gallery/">Visit</a></p>
